--- a/index.html
+++ b/index.html
@@ -6,15 +6,49 @@
 </head>
 
   <body>
-    <h1>Discover hidden places in the world</h1>
-  <p>
+    <h1>Discover hidden places in the world around you</h1>
+<div>
+  <p class= "aquamarine size center">
     <a href="./index.html">Download Excursion (Coming Soon!).</a>
+<br />
 
+<video src="./resources/excursion.mp4" autoplay >
+  Video not supported
+</video>
+  </p>
+</div>
 
+  <br />
 
+  <div>
+  <h2>Your personal travel guide</h2>
+    <br />
+<p> Excursion remembers places you like, and recommends new points of interests
+  around you.
+  <br />
+  <br />
+  </p>
+  <p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
+  </p>
+    <br />
+    <br />
+      <p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
+  </p>
+</div>
+
+<div>
+    <h2>Coming Soon for iPhone and Android</h2>
+      <br />
+    <p class= "download">
+      <a href="./index.html">Download Excursion (Coming Soon!).</a>
     </p>
+</div>
+<br />
+  <p class= "copyright">&copy; Excursion</p>
 
-
+copy
 
   </body>
 </html>
